--- a/src/styles/block/_logo.scss
+++ b/src/styles/block/_logo.scss
@@ -4,5 +4,5 @@
   height: 25px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../images/logo/Air.svg);
+  background-image: url("/images/logo/Air.svg");
 }
