--- a/src/styles/block/_services-card.scss
+++ b/src/styles/block/_services-card.scss
@@ -8,7 +8,7 @@
   transition: all 0.3s linear;
 
   &:hover {
-    background: rgb(248,248,248);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
   }
 
   &__num {
