--- a/src/styles/block/_testimonials.scss
+++ b/src/styles/block/_testimonials.scss
@@ -63,7 +63,7 @@
 
     &:hover {
       transform: scale(1.03);
-      background-color: rgb(248,248,248);
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
     }
   }
 }
